--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 user-scalable=no">
 		<!-- TODO let the user submit a guess by pressing return -->
 		<!-- TODO hide and show history area as needed -->
-                <link rel="stylesheet" href="guess.css">
+                <link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<div id="game">
