--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 				on <a href="https://github.com/simonprickett/jsnumberguess/" target="_blank">GitHub</a>.
 			</div>
 		</div>
+		<script src="index.js"></script>
 	</body>
 </html>
