--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				</ol>
 			</div>
 			<div id="footerArea">
-				This is a basic demo by Simon Prickett.  You can find the code 
-				on <a href="https://github.com/simonprickett/jsnumberguess/" target="_blank">GitHub</a>.
+				This is a basic demo by Ritish Singhai.  You can find the code 
+				on <a href="https://github.com/ritish456/guess-number.git"_blank">GitHub</a>.
 			</div>
 		</div>
 		<script src="index.js"></script>
