--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- TODO hide and show history area as needed -->
                 <link rel="stylesheet" href="styles.css">
 	</head>
-	<body>
+	<body bgcolor="blue">
 		<div id="game">
 			<h1>Number Guessing Game</h1>
 			<div id="statusArea">
